--- a/index.html
+++ b/index.html
@@ -1,25 +1,100 @@
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="reset.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<script src="index.js"></script>
-	</head>
-	<body>
-		<div id="header">
-			<h1>Todolist++</h1>
-			<input type="text" id="new-task-box"/>
-			<input type="button" value="Add" onclick="addTask()"/>
-			<input type="button" value="Clear Done Tasks" onclick="clearFinished()" />
+
+<head>
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="index.js"></script>
+</head>
+
+<body>
+	<div id="header">
+		<h1>Todolist++</h1>
+		<input type="text" id="new-task-box" />
+		<input type="button" id="add-btn" value="Add" />
+		<input type="button" id="clr-btn" value="Clear Done Tasks" />
+	</div>
+	<div id="col-space">
+		<div id="col-1">
+			<ol id="day-list">
+				<li>Monday</li>
+				<li>Tuesday</li>
+				<li>Wednesday</li>
+				<li>Thursday</li>
+				<li>Friday</li>
+				<li>Saturday</li>
+				<li>Sunday</li>
+			</ol>
 		</div>
-		<ul id="unfinished-list">
-			<li>Hit the gym</li>
-			<li>Eat Cheese</li>
-			<li>Bake Bread</li>
-			<li>Clean Room</li>
-		</ul>
-		<ul id="finished-list">
-			<li>Clean car</li>
-			<li>Wash Dishes</li>
-		</ul>
-	</body>
+		<div id="col-2">
+			<div id="mon-list">
+				<ul class="unfinished-list">
+					<li>Hit the gym</li>
+					<li>Eat Cheese</li>
+					<li>Bake Bread</li>
+					<li>Clean Room</li>
+				</ul>
+				<ul class="finished-list">
+					<li>Clean car</li>
+					<li>Wash Dishes</li>
+				</ul>
+			</div>
+			<div id="tue-list">
+				<ul class="unfinished-list">
+					<li>Hit the gym</li>
+					<li>Eat Cheese</li>
+				</ul>
+				<ul class="finished-list">
+					<li>Clean car</li>
+				</ul>
+			</div>
+			<div id="wed-list">
+				<ul class="unfinished-list">
+					<li>Hit the gym</li>
+					<li>Eat Cheese</li>
+				</ul>
+				<ul class="finished-list">
+					<li>Clean car</li>
+				</ul>
+			</div>
+			<div id="thur-list">
+				<ul class="unfinished-list">
+					<li>Hit the gym</li>
+					<li>Eat Cheese</li>
+				</ul>
+				<ul class="finished-list">
+					<li>Clean car</li>
+				</ul>
+			</div>
+			<div id="fri-list">
+				<ul class="unfinished-list">
+					<li>Hit the gym</li>
+					<li>Eat Cheese</li>
+				</ul>
+				<ul class="finished-list">
+					<li>Clean car</li>
+				</ul>
+			</div>
+			<div id="sat-list">
+				<ul class="unfinished-list">
+					<li>Hit the gym</li>
+					<li>Eat Cheese</li>
+				</ul>
+				<ul class="finished-list">
+					<li>Clean car</li>
+				</ul>
+			</div>
+			<div id="sun-list">
+				<ul class="unfinished-list">
+					<li>Hit the gym</li>
+					<li>Eat Cheese</li>
+				</ul>
+				<ul class="finished-list">
+					<li>Clean car</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+</body>
+
 </html>
