cleaned up example tasks

--- a/index.html
+++ b/index.html
@@ -28,68 +28,58 @@
 		<div id="col-2">
 			<div id="mon-list">
 				<ul class="unfinished-list">
-					<li>Hit the gym</li>
-					<li>Eat Cheese</li>
-					<li>Bake Bread</li>
-					<li>Clean Room</li>
+					<li>Example Monday Task</li>
 				</ul>
 				<ul class="finished-list">
-					<li>Clean car</li>
-					<li>Wash Dishes</li>
+					<li>Example Finished Monday Task</li>
 				</ul>
 			</div>
 			<div id="tue-list">
 				<ul class="unfinished-list">
-					<li>Hit the gym</li>
-					<li>Eat Cheese</li>
+					<li>Example Tuesday Task</li>
 				</ul>
 				<ul class="finished-list">
-					<li>Clean car</li>
+					<li>Example Finished Tuesday Task</li>
 				</ul>
 			</div>
 			<div id="wed-list">
 				<ul class="unfinished-list">
-					<li>Hit the gym</li>
-					<li>Eat Cheese</li>
+					<li>Example Wednesday Task</li>
 				</ul>
 				<ul class="finished-list">
-					<li>Clean car</li>
+					<li>Example Finished Wednesday Task</li>
 				</ul>
 			</div>
 			<div id="thur-list">
 				<ul class="unfinished-list">
-					<li>Hit the gym</li>
-					<li>Eat Cheese</li>
+					<li>Example Thursday Task</li>
 				</ul>
 				<ul class="finished-list">
-					<li>Clean car</li>
+					<li>Example Finished Thursday Task</li>
 				</ul>
 			</div>
 			<div id="fri-list">
 				<ul class="unfinished-list">
-					<li>Hit the gym</li>
-					<li>Eat Cheese</li>
+					<li>Example Friday Task</li>
 				</ul>
 				<ul class="finished-list">
-					<li>Clean car</li>
+					<li>Example Finished Friday Task</li>
 				</ul>
 			</div>
 			<div id="sat-list">
 				<ul class="unfinished-list">
-					<li>Hit the gym</li>
-					<li>Eat Cheese</li>
+					<li>Example Saturday Task</li>
 				</ul>
 				<ul class="finished-list">
-					<li>Clean car</li>
+					<li>Example Finished Saturday Task</li>
 				</ul>
 			</div>
 			<div id="sun-list">
 				<ul class="unfinished-list">
-					<li>Hit the gym</li>
-					<li>Eat Cheese</li>
+					<li>Example Sunday Task</li>
 				</ul>
 				<ul class="finished-list">
-					<li>Clean car</li>
+					<li>Example Finished Sunday Task</li>
 				</ul>
 			</div>
 		</div>
