removed usage of globals and added commets

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="reset.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<script src="index.js"></script>
 </head>
 
 <body>
 	<div id="header">
+		<p id="uname">Logged in as</p>
 		<h1>Todolist++</h1>
 		<input type="text" id="new-task-box" />
 		<input type="button" id="add-btn" value="Add" />
