--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-	<link rel="stylesheet" type="text/css" href="reset.css">
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="./reset.css">
+	<link rel="stylesheet" type="text/css" href="./index.css">
 	<script src="index.js"></script>
 </head>
 
